7 Sep 2012 Not yet released

Breaking changes from Version 0.4
---------------------------------
The API has been overhauled in preparation for the first official release. The breaking changes are:
Bollywell.Messaging.Config renamed to Bollywell.Messaging.Storage.
XXXConfigProvider classes renamed to XXXProvider. (I toyed with XXXCloud, but that will date quickly.)
Poller renamed to Listener and IHydraService.GetPoller to IHydraService.GetListener.
The various bufferDelayMs and pollIntervalMs method parameters are now properties on a new ListenerOptions class, which can optionally be provided to the HydraService constructor, to apply to all Listeners on that service, or to the GetListener method, to apply to just that Listener.


Other changes
-------------
Updated Erlang UUID code to match the official CouchDb source.
Improved MessageId management to allow any suffix, rather than just two-byte hex strings.
Added PreferenceOrderProvider.
Created IStore interface and Provider constructors, and replaced timers with Schedulers, to help with testing. Created some tests.
Upgraded to Rx 2.0.

------------------------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------------------

30 Jul 2012 Version 0.4

The first beta release of Hydra. Full source code is in hydra0.4.source.zip. Binaries and CouchDb setup information only are in hydra0.4.dist.zip. These correspond to the Git repository tag v0.4.

The main change is the addition of NearestServerConfigProvider, which gives failover and failback functionality. There have also been some improvements to the Scavenger Service, and several components are more configurable.

------------------------------------------------------------------------------------------------------------------------------